--- a/webservice/src/main/webapp/WEB-INF/web.xml
+++ b/webservice/src/main/webapp/WEB-INF/web.xml
@@ -9,13 +9,13 @@
     <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
     <init-param>
       <param-name>com.sun.jersey.config.property.packages</param-name>
-      <param-value>com.webservice</param-value>
+      <param-value>com.webservice.resource</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
 
   <servlet-mapping>
     <servlet-name>jersey-serlvet</servlet-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>/api/*</url-pattern>
   </servlet-mapping>
 </web-app>
