--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -20,7 +20,7 @@
     <dependency>
         <groupId>org.glassfish.jersey.containers</groupId>
         <artifactId>jersey-container-servlet</artifactId>
-        <version>2.25.1</version>
+        <version>2.0</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
@@ -30,21 +30,18 @@
         <version>2.0</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-moxy -->
+ <!--It use to convert model to json-->
+    <dependency>
+        <groupId>org.glassfish.jersey.media</groupId>
+        <artifactId>jersey-media-json-jackson</artifactId>
+        <version>2.15</version>
+    </dependency>
+ <!--we also can use bellow com.owlike dependecy for json conversion-->
     <!--<dependency>-->
-        <!--<groupId>org.glassfish.jersey.media</groupId>-->
-        <!--<artifactId>jersey-media-moxy</artifactId>-->
-        <!--<version>2.25.1</version>-->
+        <!--<groupId>com.owlike</groupId>-->
+        <!--<artifactId>genson</artifactId>-->
+        <!--<version>0.93</version>-->
     <!--</dependency>-->
-
-
-    <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-json -->
-    <!--<dependency>-->
-        <!--<groupId>org.glassfish.jersey.media</groupId>-->
-        <!--<artifactId>jersey-media-json</artifactId>-->
-        <!--<version>2.0-m05-1</version>-->
-    <!--</dependency>-->
-
 
 </dependencies>
 <build>
